--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.13-slim-bookworm AS base
 
 
 FROM base AS builder
-COPY --from=ghcr.io/astral-sh/uv:0.7.2 /uvx /bin/
+COPY --from=ghcr.io/astral-sh/uv:0.7.2 /uv /uvx /bin/
 ENV UV_COMPILE_BYTECODE=1 UV_LINK_MODE=copy
 
 WORKDIR /app
@@ -18,5 +18,3 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 FROM base
 COPY --from=builder /app /app
 ENV PATH="/app/.venv/bin:$PATH"
-EXPOSE 8000
-CMD ["uvicorn", "src:app", "--host", "0.0.0.0", "--port", "8000"]
