--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = "==3.13.*"
 dependencies = [
     "alembic==1.15.*",
-    "fastapi[standard]==0.115.*",
+    "fastapi==0.115.*",
+    "granian==2.2.*",
     "orjson==3.10.*",
     "psycopg[binary]==3.2.*",
+    "pydantic[email]==2.11.*",
     "pydantic-settings==2.9.*",
     "redis[hiredis]==5.3.*",
     "sqlalchemy[asyncio]==2.0.*",
@@ -49,7 +51,7 @@ quote-style = 'single'
 [tool.ruff.lint]
 ignore = [
     'ARG', 'A001', 'A002', 'COM812', 'CPY001', 'D100', 'D104', 'D105', 'D106', 'D107', 'D203', 'D205', 'D213', 'D400',
-    'D406', 'D407', 'D413', 'D415', 'FURB140', 'PLC0414', 'RUF010', 'TC003', 'TD003', 'TID252',
+    'D406', 'D407', 'D413', 'D415', 'E712', 'FURB140', 'PLC0414', 'PLR0913', 'RUF010', 'TC003', 'TD003', 'TID252',
 ]
 select = ['ALL']
 
