--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -10,7 +10,7 @@ COPY uv.lock pyproject.toml /app
 RUN --mount=type=cache,target=/root/.cache/uv \
   uv sync --frozen --no-install-project --no-dev
 
-COPY . /app
+COPY src/ /app
 RUN --mount=type=cache,target=/root/.cache/uv \
   uv sync --frozen --no-dev
 
