--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings==2.9.*",
     "redis[hiredis]==5.3.*",
     "sqlalchemy[asyncio]==2.0.*",
+    "dacite==1.9.*",
 ]
 
 [dependency-groups]
